oop_mro/tests/trybuild/fail_associated_type.rs
use oop_mro::prelude::*;

oop_class! {
    class Utility {
        type Item = usize;
    }
}

fn main() {}
